--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,4 +1,5 @@
 ARG PHP_VERSION=""
-FROM php:${PHP_VERSION}-fpm-alpine
+FROM php:${PHP_VERSION}
 
 RUN docker-php-ext-install mysqli
+RUN docker-php -S localhost:8000 index.php
